--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -320,19 +320,22 @@ $menu-panel-padding-y:          20px !default;
 
 // Modal
 
-$modal-backdrop-bg-dark:  $black-hint !default;
-$modal-backdrop-bg-light: $black-hint !default;
-$modal-bg-dark:           $dark-4 !default;
-$modal-bg-light:          $light-4 !default;
-$modal-border-radius:     2px !default;
-$modal-box-shadow:        $shadow-24dp !default;
-$modal-footer-padding-x:  8px !default;
-$modal-footer-padding-y:  8px !default;
-$modal-inner-spacer-x:    24px !default;
-$modal-inner-spacer-y:    20px !default;
-$modal-padding-x:         24px !default;
-$modal-padding-y:         24px !default;
-$modal-width:             560px !default;
+$modal-backdrop-bg-dark:   $black-hint !default;
+$modal-backdrop-bg-light:  $black-hint !default;
+$modal-bg-dark:            $dark-4 !default;
+$modal-bg-light:           $light-4 !default;
+$modal-border-color-dark:  $dark-1 !default;
+$modal-border-color-light: $light-1 !default;
+$modal-border-width:       1px !default;
+$modal-border-radius:      2px !default;
+$modal-box-shadow:         $shadow-24dp !default;
+$modal-footer-padding-x:   8px !default;
+$modal-footer-padding-y:   8px !default;
+$modal-inner-spacer-x:     24px !default;
+$modal-inner-spacer-y:     20px !default;
+$modal-padding-x:          24px !default;
+$modal-padding-y:          24px !default;
+$modal-width:              560px !default;
 
 
 // Nav
