--- a/common/common.scss
+++ b/common/common.scss
@@ -2767,7 +2767,7 @@ div.ac-wrap input[type='text'] {
 }
 
 ol.category-breadcrumb {
-  margin: 0 0 8px 0;
+  margin: 0 0 8px;
 }
 ol.category-breadcrumb li {
   display: -webkit-box;
