adjust avatar margins in topic list

--- a/scss/common/_topic-list.scss
+++ b/scss/common/_topic-list.scss
@@ -209,7 +209,7 @@
 
   .posters > a {
     float: none;
-    margin-right: $tbody-cell-padding-x;
+    margin-right: $spacer-xs;
   }
 
   .sortable {
